<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            app:srcCompat="?attr/actionModeCloseDrawable"
            android:onClick="goHome"
            android:contentDescription="@string/back_to_home" />

        <ImageButton
            android:id="@+id/setttingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:contentDescription="@string/go_to_settings"
            android:onClick="goSettings"
            app:srcCompat="@android:drawable/ic_menu_preferences"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="359dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="179dp"
        android:layout_height="74dp"
        android:layout_gravity="center"
        android:text="@string/settings"
        android:textSize="48sp"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="35dp" />


    <Button
        android:id="@+id/ModifyApps"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:text="@string/modify_apps"
        android:layout_gravity="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="155dp" />

    <Button
        android:id="@+id/fontButton"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:text="@string/customise_fonts"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="230dp" />

    <Button
        android:id="@+id/backgroundButton"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:text="@string/background"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="305dp" />

    <Button
        android:id="@+id/languageButton"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:text="@string/languages"
        android:layout_gravity="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="380dp" />

    <Button
        android:id="@+id/exitApp"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:text="@string/exit_app"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:onClick="closeApp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="455dp" />

</androidx.appcompat.widget.LinearLayoutCompat>