<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingLanguage">

    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Language"
        android:textSize="48sp"
        />

    <Button
        android:id="@+id/english"
        android:layout_marginTop="20dp"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:text="@string/english"
        android:layout_gravity="center"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/Japanese"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:text="@string/japanese"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/Chinese"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:text="@string/chinese"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/Italian"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:text="@string/italian"
        android:layout_gravity="center"
        android:textSize="24sp"
         />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:text="@string/confirm"
        android:textSize="24sp"
        android:layout_gravity="center" />
</androidx.appcompat.widget.LinearLayoutCompat>